--- a/view/backoffice/sidebar.html
+++ b/view/backoffice/sidebar.html
@@ -25,4 +25,20 @@
     </li>
 
     <hr class="sidebar-divider">
+
+    <li class="nav-item">
+        <a class="nav-link" href="inscription_manage.php">
+            <i class="fas fa-users"></i>
+            <span>Inscriptions</span>
+        </a>
+    </li>
+
+    <!-- STATISTIQUES -->
+    <li class="nav-item">
+        <a class="nav-link" href="stats.php">
+            <i class="fas fa-chart-bar"></i>
+            <span>Statistiques</span>
+        </a>
+    </li>
+
 </ul>
