Refactor: Renommage dossiers front->FrontOffice et back->BackOffice + Installation PHPMailer + Correction chemins images

--- a/view/BackOffice/header.html
+++ b/view/BackOffice/header.html
@@ -10,7 +10,7 @@
   <header class="header-back">
     <div class="container">
       <h1>Admin - Paix & Inclusion</h1>
-      <a href="../front/index.html" class="btn-logout">Retour site</a>
+      <a href="../FrontOffice/index.html" class="btn-logout">Retour site</a>
     </div>
   </header>
   <main class="container">
