--- a/view/BackOffice/produits.html
+++ b/view/BackOffice/produits.html
@@ -364,7 +364,7 @@
           
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../front/produits.html" target="_blank">
+              <a class="nav-link" href="../FrontOffice/produits.html" target="_blank">
                 <i class="fas fa-globe fa-sm"></i>
                 <span class="d-none d-lg-inline text-gray-600 small ml-2">Voir le site</span>
               </a>
@@ -373,7 +373,7 @@
             <div class="topbar-divider d-none d-sm-block"></div>
             
             <li class="nav-item">
-              <a class="nav-link" href="../front/index.html">
+              <a class="nav-link" href="../FrontOffice/index.html">
                 <i class="fas fa-sign-out-alt fa-sm fa-fw"></i>
                 <span class="d-none d-lg-inline text-gray-600 small ml-2">Quitter</span>
               </a>
