--- a/view/FrontOffice/confirmation.html
+++ b/view/FrontOffice/confirmation.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="hero-navbar.css" />
-  <link rel="stylesheet" href="../back/assets/css/style-front.css" />
+  <link rel="stylesheet" href="../BackOffice/assets/css/style-front.css" />
   <style>
     .success-animation {
       animation: scaleIn 0.5s ease-out;
@@ -88,7 +88,7 @@
     <div class="container">
       <div class="menu-wrap">
         <a href="index.html" class="logo">
-          <img src="../back/assets/img/logo.png" alt="Logo PeaceConnect">
+          <img src="../BackOffice/assets/img/logo.png" alt="Logo PeaceConnect">
           PeaceConnect
         </a>
         <ul class="site-menu" id="mainMenu">
@@ -123,7 +123,7 @@
     </ul>
     <p style="margin-top:30px; font-size:14px; color:#555;">Appelez-nous : <strong>+33 1 23 45 67 89</strong></p>
   </div>
-  <script src="../back/assets/js/cart-badge.js" defer></script>
+  <script src="../BackOffice/assets/js/cart-badge.js" defer></script>
 
   <main class="container" style="padding-top: 100px; padding-bottom: 60px;">
     <div style="max-width: 700px; margin: 0 auto; text-align: center;">
