--- a/view/FrontOffice/index_integrated.html
+++ b/view/FrontOffice/index_integrated.html
@@ -9,15 +9,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="hero-navbar.css" />
-  <link rel="stylesheet" href="../back/assets/css/style-front.css" />
-  <link rel="stylesheet" href="../back/assets/css/navbar.css" />
+  <link rel="stylesheet" href="../BackOffice/assets/css/style-front.css" />
+  <link rel="stylesheet" href="../BackOffice/assets/css/navbar.css" />
 </head>
 <body>
   <!-- Navbar -->
   <nav class="site-nav" id="siteNav">
     <div class="container">
       <div class="menu-wrap">
-        <a href="index_integrated.html" class="logo"><img src="../back/assets/img/logo.png" alt="Logo PeaceConnect"> PeaceConnect</a>
+        <a href="index_integrated.html" class="logo"><img src="../BackOffice/assets/img/logo.png" alt="Logo PeaceConnect"> PeaceConnect</a>
         <ul class="site-menu">
           <li><a href="index_integrated.html" class="active">Accueil</a></li>
           <li><a href="produits.html">Produits</a></li>
@@ -90,6 +90,6 @@
       closeBtn.addEventListener('click', function(){ mobile.classList.remove('open'); });
     })();
   </script>
-  <script src="../back/assets/js/cart-badge.js" defer></script>
+  <script src="../BackOffice/assets/js/cart-badge.js" defer></script>
 </body>
 </html>
