--- a/view/FrontOffice/pages/index_paiement.html
+++ b/view/FrontOffice/pages/index_paiement.html
@@ -252,10 +252,10 @@
                 <i class="fas fa-shopping-cart card-icon" style="color: #f5576c;"></i>
                 <h3 class="card-title">Test en Direct</h3>
                 <p class="card-description">Testez le flux complet de paiement avec des données de test.</p>
-                <a href="view/front/produits.html" class="btn">
+                <a href="view/FrontOffice/produits.html" class="btn">
                     <i class="fas fa-shopping-bag"></i> Voir les produits
                 </a>
-                <a href="view/front/panier.html" class="btn btn-secondary">
+                <a href="view/FrontOffice/panier.html" class="btn btn-secondary">
                     <i class="fas fa-shopping-cart"></i> Panier
                 </a>
             </div>
@@ -265,10 +265,10 @@
                 <i class="fas fa-chart-line card-icon" style="color: #764ba2;"></i>
                 <h3 class="card-title">Back Office</h3>
                 <p class="card-description">Gérez les commandes et suivez les paiements depuis le dashboard.</p>
-                <a href="view/back/dashboard.html" class="btn">
+                <a href="view/BackOffice/dashboard.html" class="btn">
                     <i class="fas fa-tachometer-alt"></i> Dashboard
                 </a>
-                <a href="view/back/commandes.html" class="btn btn-secondary">
+                <a href="view/BackOffice/commandes.html" class="btn btn-secondary">
                     <i class="fas fa-list"></i> Commandes
                 </a>
             </div>
@@ -281,7 +281,7 @@
                 <a href="controller/PaiementController.php" class="btn">
                     <i class="fas fa-file-code"></i> Controller
                 </a>
-                <a href="view/back/assets/js/paiement.js" class="btn btn-secondary">
+                <a href="view/BackOffice/assets/js/paiement.js" class="btn btn-secondary">
                     <i class="fab fa-js"></i> JavaScript
                 </a>
             </div>
