--- a/view/FrontOffice/pages/index_mailing.html
+++ b/view/FrontOffice/pages/index_mailing.html
@@ -251,10 +251,10 @@
                 <i class="fas fa-shopping-cart card-icon" style="color: #f6c23e;"></i>
                 <h3 class="card-title">Tester une commande</h3>
                 <p class="card-description">Passez une commande réelle pour recevoir l'email de confirmation.</p>
-                <a href="view/front/produits.html" class="btn">
+                <a href="view/FrontOffice/produits.html" class="btn">
                     <i class="fas fa-shopping-bag"></i> Produits
                 </a>
-                <a href="view/front/panier.html" class="btn">
+                <a href="view/FrontOffice/panier.html" class="btn">
                     <i class="fas fa-shopping-cart"></i> Panier
                 </a>
             </div>
@@ -284,7 +284,7 @@
                 <i class="fas fa-tachometer-alt card-icon" style="color: #4e73df;"></i>
                 <h3 class="card-title">Back Office</h3>
                 <p class="card-description">Gérez les commandes et consultez les notifications envoyées.</p>
-                <a href="view/back/dashboard.html" class="btn">
+                <a href="view/BackOffice/dashboard.html" class="btn">
                     <i class="fas fa-chart-line"></i> Dashboard
                 </a>
             </div>
