--- a/view/FrontOffice/paiement.html
+++ b/view/FrontOffice/paiement.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="hero-navbar.css" />
-  <link rel="stylesheet" href="../back/assets/css/style-front.css" />
+  <link rel="stylesheet" href="../BackOffice/assets/css/style-front.css" />
   
   <!-- Stripe JS -->
   <script src="https://js.stripe.com/v3/"></script>
@@ -17,7 +17,7 @@
   <!-- PayPal JS -->
   <script src="https://www.paypal.com/sdk/js?client-id=YOUR_PAYPAL_CLIENT_ID&currency=TND"></script>
   
-  <script src="../back/assets/js/paiement.js" defer></script>
+  <script src="../BackOffice/assets/js/paiement.js" defer></script>
 </head>
 <body>
   <!-- Navbar -->
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="menu-wrap">
         <a href="index.html" class="logo">
-          <img src="../back/assets/img/logo.png" alt="Logo PeaceConnect">
+          <img src="../BackOffice/assets/img/logo.png" alt="Logo PeaceConnect">
           PeaceConnect
         </a>
         <ul class="site-menu" id="mainMenu">
@@ -60,7 +60,7 @@
     </ul>
     <p style="margin-top:30px; font-size:14px; color:#555;">Appelez-nous : <strong>+33 1 23 45 67 89</strong></p>
   </div>
-  <script src="../back/assets/js/cart-badge.js" defer></script>
+  <script src="../BackOffice/assets/js/cart-badge.js" defer></script>
   
   <!-- Hero Section -->
   <section class="hero overlay" style="background-image:url('https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?w=1600&auto=format&fit=crop'); min-height: 400px;">
