--- a/view/FrontOffice/produits.html
+++ b/view/FrontOffice/produits.html
@@ -13,11 +13,11 @@
   <!-- New Hero + Navbar Styles -->
   <link rel="stylesheet" href="hero-navbar.css" />
   <!-- Existing project styles -->
-  <link rel="stylesheet" href="../back/assets/css/style-front.css" />
+  <link rel="stylesheet" href="../BackOffice/assets/css/style-front.css" />
   <!-- (Optional) remove old navbar.css if redundant -->
-  <link rel="stylesheet" href="../back/assets/css/navbar.css" />
+  <link rel="stylesheet" href="../BackOffice/assets/css/navbar.css" />
   
-  <script src="../back/assets/js/produit-front.js" defer></script>
+  <script src="../BackOffice/assets/js/produit-front.js" defer></script>
 </head>
 <body>
   <!-- New Transparent Navbar -->
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="menu-wrap">
         <a href="index.html" class="logo">
-          <img src="../back/assets/img/logo.png" alt="Logo PeaceConnect">
+          <img src="../BackOffice/assets/img/logo.png" alt="Logo PeaceConnect">
           PeaceConnect
         </a>
         <ul class="site-menu" id="mainMenu">
@@ -59,7 +59,7 @@
     </ul>
     <p style="margin-top:30px; font-size:14px; color:#555;">Appelez-nous : <strong>+33 1 23 45 67 89</strong></p>
   </div>
-  <script src="../back/assets/js/cart-badge.js" defer></script>
+  <script src="../BackOffice/assets/js/cart-badge.js" defer></script>
   
   <!-- Hero Section replication -->
   <section class="hero overlay" style="background-image:url('https://images.unsplash.com/photo-1532629345422-7515f3d16bb6?w=1600&auto=format&fit=crop');">
