--- a/view/FrontOffice/suivi.html
+++ b/view/FrontOffice/suivi.html
@@ -9,9 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="hero-navbar.css" />
-  <link rel="stylesheet" href="../back/assets/css/style-front.css" />
-  <link rel="stylesheet" href="../back/assets/css/navbar.css" />
-  <script src="../back/assets/js/suivi.js?v=2.0" defer></script>
+  <link rel="stylesheet" href="../BackOffice/assets/css/style-front.css" />
+  <link rel="stylesheet" href="../BackOffice/assets/css/navbar.css" />
+  <script src="../BackOffice/assets/js/suivi.js?v=2.0" defer></script>
   <style>
     .suivi-form {
       max-width: 700px;
@@ -57,7 +57,7 @@
   <nav class="site-nav" id="siteNav">
     <div class="container">
       <div class="menu-wrap">
-        <a href="index.html" class="logo"><img src="../back/assets/img/logo.png" alt="Logo PeaceConnect"> PeaceConnect</a>
+        <a href="index.html" class="logo"><img src="../BackOffice/assets/img/logo.png" alt="Logo PeaceConnect"> PeaceConnect</a>
         <ul class="site-menu">
           <li><a href="index.html">Accueil</a></li>
           <li><a href="produits.html">Produits</a></li>
@@ -80,7 +80,7 @@
       <li><a href="panier.html">Panier</a></li>
     </ul>
   </div>
-  <script src="../back/assets/js/cart-badge.js" defer></script>
+  <script src="../BackOffice/assets/js/cart-badge.js" defer></script>
   <!-- Hero Section -->
   <section class="hero overlay" style="background-image:url('https://images.unsplash.com/photo-1532629345422-7515f3d16bb6?w=1600&auto=format&fit=crop');">
     <div class="hero-inner">
