--- a/view/FrontOffice/confirmation.html
+++ b/view/FrontOffice/confirmation.html
@@ -87,12 +87,12 @@
   <nav class="site-nav" id="siteNav">
     <div class="container">
       <div class="menu-wrap">
-        <a href="index.html" class="logo">
+        <a href="index.php" class="logo">
           <img src="../BackOffice/assets/img/logo.png" alt="Logo PeaceConnect">
           PeaceConnect
         </a>
-        <ul class="site-menu" id="mainMenu">
-          <li><a href="index.html">Accueil</a></li>
+        <ul class="site-menu">
+          <li><a href="index.php">Accueil</a></li>
           <li><a href="produits.html">Produits</a></li>
           <li><a href="suivi.html">Suivi</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -115,7 +115,7 @@
   <div class="mobile-menu" id="mobileMenu">
     <div class="close-btn" id="closeMobile">&times;</div>
     <ul>
-      <li><a href="index.html">Accueil</a></li>
+      <li><a href="index.php">Accueil</a></li>
       <li><a href="produits.html">Produits</a></li>
       <li><a href="suivi.html">Suivi</a></li>
       <li><a href="#contact">Contact</a></li>
@@ -174,10 +174,10 @@
       <div class="footer-column">
         <h4>Navigation</h4>
         <ul>
-          <li><a href="index.html#about">À propos de nous</a></li>
-          <li><a href="index.html#donate">Donner maintenant</a></li>
+          <li><a href="index.php#about">À propos de nous</a></li>
+          <li><a href="index.php#donate">Donner maintenant</a></li>
           <li><a href="produits.html">Produit</a></li>
-          <li><a href="index.html#volunteer">Bénévole</a></li>
+          <li><a href="index.php#volunteer">Bénévole</a></li>
         </ul>
       </div>
       <div class="footer-column">
