--- a/view/BackOffice/sidebar.html
+++ b/view/BackOffice/sidebar.html
@@ -1,5 +1,5 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index_events.php">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/PeaceConnect/view/BackOffice/index_events.php">
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-dove"></i>
         </div>
@@ -9,7 +9,7 @@
     <hr class="sidebar-divider my-0">
 
     <li class="nav-item">
-        <a class="nav-link" href="index_events.php">
+        <a class="nav-link" href="/PeaceConnect/view/BackOffice/index_events.php">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span>
         </a>
@@ -18,7 +18,7 @@
     <hr class="sidebar-divider">
 
     <li class="nav-item">
-        <a class="nav-link" href="events_manage.php">
+        <a class="nav-link" href="/PeaceConnect/view/BackOffice/events_manage.php">
             <i class="fas fa-calendar"></i>
             <span>Événements</span>
         </a>
@@ -27,7 +27,7 @@
     <hr class="sidebar-divider">
 
     <li class="nav-item">
-        <a class="nav-link" href="inscription_manage.php">
+        <a class="nav-link" href="/PeaceConnect/view/BackOffice/inscription_manage.php">
             <i class="fas fa-users"></i>
             <span>Inscriptions</span>
         </a>
@@ -35,9 +35,49 @@
 
     <!-- STATISTIQUES -->
     <li class="nav-item">
-        <a class="nav-link" href="stats.php">
+        <a class="nav-link" href="/PeaceConnect/view/BackOffice/stats.php">
             <i class="fas fa-chart-bar"></i>
             <span>Statistiques</span>
+        </a>
+    </li>
+
+    <hr class="sidebar-divider">
+    <!-- AUTRES TABLEAUX AVANCÉS -->
+    <div class="sidebar-heading">Autres Tableaux</div>
+    <li class="nav-item">
+        <a class="nav-link" href="/PeaceConnect/view/BackOffice/dashboard_unified.php">
+            <i class="fas fa-layer-group"></i>
+            <span>Hub Unifié</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/PeaceConnect/view/BackOffice/dashboard_ichrak.php">
+            <i class="fas fa-newspaper"></i>
+            <span>Articles & Blog</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="dashboard.html">
+            <i class="fas fa-box"></i>
+            <span>Produits & Commandes</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/PeaceConnect/view/BackOffice/indexRanim.php">
+            <i class="fas fa-hand-holding-heart"></i>
+            <span>Dons & Causes</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/PeaceConnect/view/BackOffice/stats_dashboard.php">
+            <i class="fas fa-chart-line"></i>
+            <span>Stats Avancées</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/PeaceConnect/view/BackOffice/blank.php">
+            <i class="fas fa-users"></i>
+            <span>Utilisateurs</span>
         </a>
     </li>
 
