--- a/view/FrontOffice/footer.html
+++ b/view/FrontOffice/footer.html
@@ -4,10 +4,10 @@
       <div class="footer-column">
         <h4>Navigation</h4>
         <ul>
-          <li><a href="index.html#about">À propos de nous</a></li>
-          <li><a href="index.html#donate">Donner maintenant</a></li>
+          <li><a href="index.php#about">À propos de nous</a></li>
+          <li><a href="index.php#donate">Donner maintenant</a></li>
           <li><a href="produits.html">Produit</a></li>
-          <li><a href="index.html#volunteer">Bénévole</a></li>
+          <li><a href="index.php#volunteer">Bénévole</a></li>
           <li><a href="#terms">Termes</a></li>
           <li><a href="#privacy">Confidentialité</a></li>
         </ul>
@@ -26,7 +26,7 @@
         <h4>Services</h4>
         <ul>
           <li><a href="produits.html">Produit</a></li>
-          <li><a href="index.html#volunteer">Bénévole</a></li>
+          <li><a href="index.php#volunteer">Bénévole</a></li>
           <li><a href="#terms">Termes</a></li>
         </ul>
       </div>
