event fix / store logo fix /user fix (UI)

--- a/view/BackOffice/sidebar.html
+++ b/view/BackOffice/sidebar.html
@@ -17,21 +17,10 @@
 
     <hr class="sidebar-divider">
 
-    <li class="nav-item">
-        <a class="nav-link" href="/PeaceConnect/view/BackOffice/events_manage.php">
-            <i class="fas fa-calendar"></i>
-            <span>Événements</span>
-        </a>
-    </li>
+  
 
     <hr class="sidebar-divider">
 
-    <li class="nav-item">
-        <a class="nav-link" href="/PeaceConnect/view/BackOffice/inscription_manage.php">
-            <i class="fas fa-users"></i>
-            <span>Inscriptions</span>
-        </a>
-    </li>
 
     <!-- STATISTIQUES -->
     <li class="nav-item">
@@ -54,6 +43,12 @@
         <a class="nav-link" href="/PeaceConnect/view/BackOffice/dashboard_ichrak.php">
             <i class="fas fa-newspaper"></i>
             <span>Articles & Blog</span>
+        </a>
+    </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/PeaceConnect/view/BackOffice/events_manage.php">
+            <i class="fas fa-calendar"></i>
+            <span>Événements & Inscriptions</span>
         </a>
     </li>
     <li class="nav-item">
