--- a/view/BackOffice/dashboard.html
+++ b/view/BackOffice/dashboard.html
@@ -535,8 +535,8 @@
     <!-- Sidebar -->
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="dashboard.html">
-        <div class="sidebar-brand-icon">
-          <img src="assets/img/logo.png" alt="PeaceConnect Logo" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover; border: 2px solid white;">
+        <div class="sidebar-brand-icon rotate-n-15">
+          <i class="fas fa-dove"></i>
         </div>
         <div class="sidebar-brand-text mx-3">PeaceConnect</div>
       </a>
@@ -585,7 +585,7 @@
           </button>
           
           <h1 class="h3 mb-0 text-gray-800">
-            <img src="assets/img/logo.png" alt="Logo" style="width: 35px; height: 35px; border-radius: 50%; object-fit: cover; margin-right: 10px; vertical-align: middle;">
+            <i class="fas fa-dove" style="font-size:24px; margin-right:10px; color:#4e73df; transform: rotate(-15deg); vertical-align: middle;"></i>
             Dashboard PeaceConnect
           </h1>
           
